--- a/docs/gitp2p.tex
+++ b/docs/gitp2p.tex
@@ -35,7 +35,7 @@ GitTorrent имплементация\footnote{https://github.com/cjb/GitTorrent
 върху github.com\footnote{https://github.com/blog/1981-large-scale-ddos-attack-on-github-com}.
 
 При положение, че git доста лесно може да се възползва от различен набор централни
-хранилища, защо да не имплементираме такава система? Ще спечели независимост,
+хранилища, защо да не имплементираме такава система? Ще спечелим независимост,
 неуязвимост и автоматизация. Базовата имплементация на gitp2p е първата стъпка
 към това.
 
@@ -43,7 +43,7 @@ GitTorrent имплементация\footnote{https://github.com/cjb/GitTorrent
 
 \subsection{}
 
-git е имплементиран, така че много лесно да се надгражда с протоколи за 
+git е имплементиран така че много лесно да се надгражда с протоколи за 
 комуникация. Нещото, което върши тази работа се нарича git-remote-helper. Общо
 взето, когато напишем команда от рода на git clone <protocol>://<repo>, ако
 git не разбира протокола ни, ще направи опит да намери remote-helper, който да
@@ -53,7 +53,7 @@ git-remote-gitp2p.
 Намирайки този remote-helper, git го стартира като подпроцес и на стандартния
 му вход почва да праща команди. Първата команда, на която даден remote-helper
 трябва да отговори е capabilities. Тази команда се използва за да се разбере
-какво може да прави нашият протокол. Отоговорът е списък с избрани възможности
+какво може да прави нашият протокол. Отговорът е списък с избрани възможности
 от следните: connect, push, fetch, import, export. След като сме пратили
 възможностите си на git, той праща команда list, с която споделяме всички ref 
 обекти, които има в дадено хранилище. На базата на тях, ще определим кои обекти
@@ -88,16 +88,16 @@ git-remote-list
 +---+                       +-----+
 |git|                +----->|relay|
 +---+               /       +-----+
-  |           _____/          3|
-1 | list     /get-peers   /----+  
-  v    _____/       _____/            +-----+
+  |           _____/           |
+  | (1) list / (2) get-peers /-+  
+  v    _____/       ________/         +-----+
 +--+  /            /        +-----+   |peer2|
-|me|-/2     peers /         |peer1|   +-----+
+|me|-/  (3) peers /         |peer1|   +-----+
 +--+<------------/          +-----+
-^ 4|     list                  ^ |5
+^  |  (4) list                 ^ | 
 |  \---------------------------+ |
 ---------------------------------+
-    repo_refs
+    (5) repo_refs
 \end{verbatim}
 
 Следващата команда, която предстои е fetch. При нея, git ни праща, на отделен ред
@@ -175,9 +175,9 @@ op-data = *(ALNUM ":")
 е поради простата причина, че когато обменяме данни може да ни се наложи да
 вкараме сериозни оптимизации с цел намаляване на обема на пакетите.
 
-Когато обменяме команди, първият байт в съобщението е "c". След това следва името
+Когато обменяме команди, първият байт в съобщението е ``c''. След това следва името
 на командата, а след това, нейните параметри. При обмяната на данни съобщението
-започва с байт "d", командата, четири задължителни информационни параметъра
+започва с байт ``d'', командата, четири задължителни информационни параметъра
 и base64 енкоднати данни.
 
 \begin{verbatim}
@@ -202,11 +202,11 @@ cnts      = *base64_Chr
 Накрая идва и pkt\_line протокола, който се обгръща от Daemon протокол за данни.
 Неговият пръв ред дава информация за хранилището и потребителя, който го ползва.
 Втория ред дава информация за алгоритъма на взимане на обекти. Накрая имаме
-редове, всеки от който започва с "want" или "have" и sha1 на обекта, който 
+редове, всеки от който започва с ``want'' или ``have'' и sha1 на обекта, който 
 искаме или имаме.
 
 \begin{verbatim}
-pkt\_line format ABNF
+pkt_line format ABNF
 ====================
 
 message = repo NL id NL *wants *haves
