--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 Current:
 1. Heartbeating:
-    -- Between relay and peers
+    V- Between relay and peers
     -- Between peers during fetch
 2. Data determination algorithm
     -- What happens when a peer dies during transfer?
