--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
 Current:
 1. Heartbeating:
     V- Between relay and peers
-    -- Between peers during fetch
+    V- Between peers during fetch
 2. Data determination algorithm
-    -- What happens when a peer dies during transfer?
+    V- What happens when a peer dies during transfer?
 3. Go through TODOs
 4. Testing of fetch functionality
     -- By hand
