--- a/TODO
+++ b/TODO
@@ -1,10 +1,10 @@
 Current:
-1. Heartbeating:
-    V- Between relay and peers
-    V- Between peers during fetch
-2. Data determination algorithm
-    V- What happens when a peer dies during transfer?
-3. Go through TODOs
+V 1. Heartbeating:
+    - Between relay and peers
+    - Between peers during fetch
+V 2. Data determination algorithm
+    - What happens when a peer dies during transfer?
+V 3. Go through TODOs
 4. Testing of fetch functionality
     -- By hand
     -- Using a test suite
