--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 Current:
+  0. Refactor `list' functionality
   1. Rework `fetch' functionality
     -- Figure out an algorithm for communicating wants/haves. It should lock 
        peers in process of receiving objects.
